# LangChainProject

./: pyproject.toml
updatedlangchain/: 1-langchainintro.ipynb  2-modelintegration.ipynb
