[project]
name = "langchainupdated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.11",
    "python-dotenv>=1.2.1",
]
